tests/base/invalid/DefiniteAssign_CompileFail_4.whiley
void System::f(string a):
    out.println(a)

void System::main([string] args):
    out.println("HELLO")
    x.f("WORLD")
